# truce

./: .gitattributes  .gitignore  ADDITIONAL_TERMS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  rust-toolchain.toml  truce.toml  truce.toml.example
crates/cargo-truce/: Cargo.toml  README.md  build.rs
crates/cargo-truce/src/: config.rs  dirs.rs  error.rs  install_scope.rs  lib.rs  main.rs  packaging_windows.rs  preset_codec.rs  scaffold.rs  templates.rs  util.rs  windows_manifest.rs
crates/cargo-truce/src/commands/: build.rs  build_dylibs.rs  doctor.rs  log_stream_au.rs  mod.rs  remove.rs  reset_aax.rs  reset_au.rs  run.rs  screenshot.rs  status.rs  test.rs  uninstall.rs  validate.rs
crates/cargo-truce/src/scaffold/: case.rs  context.rs  fourcc.rs  kind.rs  layout.rs  mod.rs  render.rs  spec.rs  statefulness.rs
crates/cargo-truce/src/util/: build.rs  bundle_link.rs  codesign.rs  locate.rs  mod.rs
crates/cargo-truce/templates/aax/: CMakeLists.txt  TruceAAX_Bridge.cpp  TruceAAX_Bridge.h  TruceAAX_Describe.cpp  TruceAAX_GUI.cpp  TruceAAX_Parameters.cpp  TruceAAX_Parameters.h  (+1 more)
crates/cargo-truce/tests/: scaffold_e2e.rs
crates/truce-aax/: Cargo.toml  README.md  build.rs
crates/truce-aax-bridge/: Cargo.toml  README.md
crates/truce-aax-bridge/include/: truce_aax_bridge.h
crates/truce-aax-bridge/src/: lib.rs
crates/truce-aax/include/: truce_aax_bridge.h
crates/truce-aax/src/: lib.rs
crates/truce-au/: Cargo.toml  README.md  build.rs
crates/truce-au/shim/: au_shim.m  au_shim_common.c  au_shim_types.h  au_v2_shim.c  au_v2_view.m
crates/truce-au/src/: cocoa_view.rs  ffi.rs  lib.rs
crates/truce-build/: Cargo.toml  README.md
crates/truce-build/src/: lib.rs  lv2.rs  manifest.rs  presets.rs
crates/truce-clap/: Cargo.toml  README.md
crates/truce-clap/src/: lib.rs  preset_discovery.rs  presets.rs
crates/truce-core/: Cargo.toml  README.md
crates/truce-core/src/: audio_tap.rs  buffer.rs  bus.rs  cast.rs  chunked_process.rs  config.rs  custom_state.rs  denormal.rs  dsp_state.rs  editor.rs  events.rs  export.rs  info.rs  lib.rs  meters.rs  midi.rs  plugin.rs  plugin_logic.rs  preset.rs  presets.rs  process.rs  rt.rs  screenshot.rs  snapshot.rs  state.rs  tasks.rs  transport.rs  ump.rs  util.rs  wrapper.rs
crates/truce-core/tests/: instance_aliasing_repro.rs  mediation_repro.rs
crates/truce-cpu/: Cargo.toml  README.md
crates/truce-cpu/src/: backend.rs  font.rs  lib.rs
crates/truce-derive/: Cargo.toml  README.md
crates/truce-derive/src/: lib.rs  lv2_emit.rs
crates/truce-driver/: Cargo.toml  README.md
crates/truce-driver/src/: lib.rs
crates/truce-dsp/: Cargo.toml
crates/truce-dsp/src/: audio_tap.rs  lib.rs
crates/truce-egui/: Cargo.toml  README.md
crates/truce-egui/src/: editor.rs  editor_ios.rs  font.rs  lib.rs  param_state.rs  platform.rs  render_thread.rs  renderer.rs  screenshot.rs  snapshot.rs  theme.rs
crates/truce-font/: Cargo.toml  README.md
crates/truce-font/src/: lib.rs  raster.rs
crates/truce-gpu/: Cargo.toml  README.md
crates/truce-gpu-examples/: Cargo.toml  README.md  truce.toml
crates/truce-gpu-examples/truce-example-gui-zoo-gpu/: Cargo.toml
crates/truce-gpu/src/: backend.rs  editor.rs  lib.rs  platform.rs  pump.rs  screenshot.rs  snapshot.rs
crates/truce-gui/: Cargo.toml  README.md  build.rs
crates/truce-gui-types/: Cargo.toml  README.md
crates/truce-gui-types/src/: interaction.rs  ios.rs  layout.rs  lib.rs  macros.rs  render.rs  snapshot.rs  theme.rs  widgets.rs
crates/truce-gui-utils/: Cargo.toml  README.md
crates/truce-gui-utils/src/: lib.rs
crates/truce-gui/shim/: macos_view.h  macos_view.m
crates/truce-gui/src/: backend_cpu.rs  blit.rs  cg_blit.rs  editor.rs  editor_ios.rs  font.rs  gpu_editor.rs  interaction.rs  layout.rs  lib.rs  macros.rs  native_view.rs  param_state.rs  platform.rs  plugin_editor.rs  plugin_logic.rs  render.rs  render_core.rs  snapshot.rs  theme.rs  widgets.rs
crates/truce-iced/: Cargo.toml  README.md  build.rs
crates/truce-iced/shim/: macos_iced_view.h  macos_iced_view.m
crates/truce-iced/src/: auto_layout.rs  editor.rs  editor_handle.rs  editor_ios.rs  font.rs  iced.rs  keyboard.rs  lib.rs  param_cache.rs  param_message.rs  param_state.rs  platform.rs  pump.rs  runtime.rs  screenshot.rs  snapshot.rs  theme.rs
crates/truce-loader/: Cargo.toml  README.md  build.rs
crates/truce-loader-tests/: Cargo.toml  README.md
crates/truce-loader-tests/tests/: background_tasks_test.rs  chunked_transport_test.rs  graceful_degradation.rs  loader_test.rs  nested_params_test.rs  param_infos_static_test.rs  param_range_shapes_test.rs  param_sync_test.rs  reload_shell_save_test.rs  reload_transition_test.rs  smoother_test.rs  state_derive_test.rs  state_snapshot_flip_test.rs
crates/truce-loader/src/: canary.rs  lib.rs  loader.rs  safe_types.rs  shell.rs  static_shell.rs  traits.rs
crates/truce-loader/tests/: graceful_degradation.rs  loader_test.rs  param_infos_static_test.rs  param_sync_test.rs  smoother_test.rs  state_derive_test.rs
crates/truce-lv2/: Cargo.toml  README.md
crates/truce-lv2/src/: atom.rs  lib.rs  state.rs  ttl.rs  types.rs  ui.rs  urid.rs
crates/truce-oversample/: Cargo.toml
crates/truce-oversample/src/: filter.rs  lib.rs
crates/truce-params/: Cargo.toml  README.md
crates/truce-params-derive/: Cargo.toml  README.md
crates/truce-params-derive/src/: lib.rs
crates/truce-params/src/: info.rs  lib.rs  range.rs  sample.rs  smooth.rs  types.rs
crates/truce-plugin/: Cargo.toml  README.md
crates/truce-plugin/src/: lib.rs
crates/truce-presets/: Cargo.toml
crates/truce-presets/src/: clap_preset.rs  lib.rs
crates/truce-presets/tests/: clap_discovery_e2e.rs
crates/truce-simd/: Cargo.toml  README.md
crates/truce-simd/benches/: audio_ops.rs
crates/truce-simd/src/: lib.rs  math64.rs
crates/truce-simd/tests/: gain_perf_regression.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: midi_short.rs  preset_container.rs  state_envelope.rs  sysex_assembler.rs  ump_decode.rs
fuzz/src/: lib.rs
(+518 files in other folders)
