[workspace]
resolver = "2"
members = [
    "crates/truce",
    "crates/truce-core",
    "crates/truce-params",
    "crates/truce-clap",
    "crates/truce-vst3",
    "crates/truce-au",
    "crates/truce-standalone",
    "crates/truce-driver",
    "crates/truce-gui",
    "crates/truce-gui-types",
    "crates/truce-plugin",
    "crates/truce-vst2",
    "crates/truce-lv2",
    "crates/truce-aax",
    "crates/truce-test",
    "crates/truce-build",
    "crates/truce-loader",
    "crates/truce-derive",
    "crates/cargo-truce",
    "crates/truce-gpu",
    "crates/truce-egui",
    "crates/truce-iced",
    "crates/truce-slint",
    "crates/truce-slint-build",
    "crates/truce-shim-types",
    "crates/truce-dsp",
    "crates/truce-font",
    "crates/truce-utils",
    "examples/truce-example-gain",
    "examples/truce-example-synth",
    "examples/truce-example-eq",
    "examples/truce-example-transpose",
    "examples/truce-example-arpeggio",
    "examples/truce-example-gain-egui",
    "examples/truce-example-tremolo",
    "examples/truce-example-state",
    "examples/truce-example-gain-iced",
    "examples/truce-example-gain-slint",
    "examples/truce-example-fundsp-reverb-worker",
    "examples/truce-example-fundsp-reverb-simple",
]

[workspace.package]
version = "0.41.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.90"
description = "Build audio plugins in Rust. One codebase, every format."
repository = "https://github.com/truce-audio/truce"
homepage = "https://github.com/truce-audio/truce"
categories = ["multimedia::audio", "development-tools::cargo-plugins"]
keywords = ["audio", "plugin", "vst", "clap", "daw", "aax", "sfx", "effects", "cubase", "protools", "ableton"]
readme = "README.md"

# Workspace-wide lint config. Crates opt in with `lints.workspace = true`.
# `objc` 0.2's `msg_send!` / `class!` / `sel!` macros emit
# `#[cfg(feature = "cargo-clippy")]` checks against the destination crate;
# whitelist that cfg value so the unexpected_cfgs lint stops complaining
# about an upstream macro-hygiene issue.
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Workspace deps. `version =` is intentionally only set on path deps
# whose crate is published to crates.io and consumed by another
# published crate via `workspace = true` (cargo strips `path` at
# publish time and needs a registry version to record). Today that's
# `truce-shim-types`, `truce-build`, and `truce-utils` — all three
# pulled in by `cargo-truce`'s lib half. Other entries are git-only /
# dev-only; omitting `version =` removes one place per release that
# has to track `[workspace.package].version`.
[workspace.dependencies]
# `default-features = false` at the workspace so individual examples
# can override per-format gating without iOS pulling `truce/clap`
# transitively. The macOS / Windows / Linux examples each
# explicitly enable `truce/<format>` in their own `[features]` block
# (`clap = ["…", "truce/clap"]`).
truce = { path = "crates/truce", default-features = false }
truce-core = { path = "crates/truce-core" }
truce-params = { path = "crates/truce-params" }
truce-clap = { path = "crates/truce-clap" }
truce-vst3 = { path = "crates/truce-vst3" }
truce-au = { path = "crates/truce-au" }
truce-standalone = { path = "crates/truce-standalone" }
truce-driver = { path = "crates/truce-driver" }
truce-gui = { path = "crates/truce-gui" }
truce-gui-types = { path = "crates/truce-gui-types" }
truce-plugin = { path = "crates/truce-plugin" }
truce-vst2 = { path = "crates/truce-vst2" }
truce-lv2 = { path = "crates/truce-lv2" }
truce-aax = { path = "crates/truce-aax" }
truce-test = { path = "crates/truce-test" }
truce-loader = { path = "crates/truce-loader" }
truce-derive = { path = "crates/truce-derive" }
truce-gpu = { path = "crates/truce-gpu" }
truce-egui = { path = "crates/truce-egui" }
truce-iced = { path = "crates/truce-iced" }
truce-slint = { path = "crates/truce-slint" }
truce-slint-build = { path = "crates/truce-slint-build" }
truce-dsp = { path = "crates/truce-dsp" }
truce-font = { path = "crates/truce-font" }
truce-build = { version = "0.41.0", path = "crates/truce-build" }
truce-shim-types = { version = "0.41.0", path = "crates/truce-shim-types" }
truce-utils = { version = "0.41.0", path = "crates/truce-utils" }

# Common third-party deps consumed by multiple workspace crates.
# Hoisted here so version bumps are a one-line change. wgpu and the
# wgpu-backed UI bridge crates use the same wgpu version under the
# hood; pinning them together prevents the GUI crates from drifting
# onto incompatible wgpu major versions.
thiserror = "2"
toml = "1"
# wgpu's default features include `webgpu` (browser) and `webgl`
# (browser GLES fallback). Plugins ship as native dylibs in DAWs,
# never the browser, so opt out of those and pin the two native
# backends that are feature-flagged here (`metal` macOS, `dx12`
# Windows) plus `wgsl` for the shader source format. Vulkan support
# (Linux's native backend) isn't feature-gated in wgpu 24 — wgpu-hal
# compiles it unconditionally on `cfg(target_os = "linux")`, so it's
# already covered without an explicit flag.
wgpu = { version = "24", default-features = false, features = ["wgsl", "metal", "dx12"] }
egui-wgpu = "0.31"
iced_wgpu = "0.13"

# The truce-audio fork carries the AAX / Pro Tools close-path fix
# (responder / tracking-area / layer-contents cleanup). GUI crates
# consume this via `baseview = { workspace = true }` so the fork
# origin is declared once.
baseview = { git = "https://github.com/truce-audio/baseview.git" }

# Custom profile for shell-mode (hot-reload) builds. `cargo truce
# install --shell` invokes `cargo build --profile shell --features
# ...,shell`, so the shell binary lands at `target/shell/lib<crate>.dylib`
# — independent of `target/release/` and `target/debug/`. Inheriting
# from "release" gives release-quality DSP perf for testing while
# leaving the regular release / debug profiles untouched for
# `cargo build` / `cargo build --release`.
[profile.shell]
inherits = "release"
