[workspace]
resolver = "2"
members = [
    "crates/truce",
    "crates/truce-core",
    "crates/truce-params",
    "crates/truce-clap",
    "crates/truce-vst3",
    "crates/truce-au",
    "crates/truce-standalone",
    "crates/truce-driver",
    "crates/truce-gui",
    "crates/truce-gui-types",
    "crates/truce-plugin",
    "crates/truce-vst2",
    "crates/truce-lv2",
    "crates/truce-aax",
    "crates/truce-aax-bridge",
    "crates/truce-test",
    "crates/truce-build",
    "crates/truce-loader",
    "crates/truce-loader-tests",
    "crates/truce-derive",
    "crates/cargo-truce",
    "crates/truce-gpu",
    "crates/truce-egui",
    "crates/truce-iced",
    "crates/truce-slint",
    "crates/truce-slint-build",
    "crates/truce-shim-types",
    "crates/truce-simd",
    "crates/truce-font",
    "crates/truce-utils",
    "examples/truce-example-gain",
    "examples/truce-example-block-gain",
    "examples/truce-example-block-saturate",
    "examples/truce-example-block-drywet",
    "examples/truce-example-block-gate",
    "examples/truce-example-block-widen",
    "examples/truce-example-block-surround-meter",
    "examples/truce-example-synth",
    "examples/truce-example-eq",
    "examples/truce-example-transpose",
    "examples/truce-example-arpeggio",
    "examples/truce-example-gain-egui",
    "examples/truce-example-tremolo",
    "examples/truce-example-state",
    "examples/truce-example-gain-iced",
    "examples/truce-example-gain-slint",
    "examples/truce-example-fundsp-reverb-worker",
    "examples/truce-example-fundsp-reverb-simple",
]

[workspace.package]
version = "0.48.9"
edition = "2024"
# Dual-license: Apache 2.0 for plug-in authors + end-user audio
# software, with a permission-gated Framework License carve-out for
# anyone redistributing truce as a commercial audio-plug-in
# framework. The Apache-side is identical to standard Apache 2.0
# (see LICENSE-APACHE); the carve-out is documented in LICENSE.
# The compound is not a registered SPDX expression, so we ship via
# `license-file` rather than `license =`.
license-file = "LICENSE"
rust-version = "1.92"
description = "Build audio plugins in Rust. One codebase, every format."
repository = "https://github.com/truce-audio/truce"
homepage = "https://github.com/truce-audio/truce"
categories = ["multimedia::audio", "development-tools::cargo-plugins"]
keywords = ["audio", "plugin", "vst", "clap", "daw", "aax", "sfx", "effects", "cubase", "protools", "ableton"]
readme = "README.md"

# Workspace-wide lint config. Crates opt in with `lints.workspace = true`.
# `objc` 0.2's `msg_send!` / `class!` / `sel!` macros emit
# `#[cfg(feature = "cargo-clippy")]` checks against the destination crate;
# whitelist that cfg value so the unexpected_cfgs lint stops complaining
# about an upstream macro-hygiene issue.
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Workspace deps. Every internal `truce-*` entry pins
# `version = "<workspace version>"` alongside `path = "..."`. The
# version is load-bearing for `cargo publish` — cargo strips `path`
# at publish time and embeds the registry version, so every internal
# dep referenced by `workspace = true` from another published crate
# must declare the registry version up front. `bump.sh` rewrites all
# of these in one pass with a global sed on the version string.
[workspace.dependencies]
# `default-features = false` at the workspace so individual examples
# can override per-format gating without iOS pulling `truce/clap`
# transitively. The macOS / Windows / Linux examples each
# explicitly enable `truce/<format>` in their own `[features]` block
# (`clap = ["…", "truce/clap"]`).
truce = { version = "0.48.9", path = "crates/truce", default-features = false }
truce-core = { version = "0.48.9", path = "crates/truce-core" }
truce-params = { version = "0.48.9", path = "crates/truce-params" }
truce-clap = { version = "0.48.9", path = "crates/truce-clap" }
truce-vst3 = { version = "0.48.9", path = "crates/truce-vst3" }
truce-au = { version = "0.48.9", path = "crates/truce-au" }
truce-standalone = { version = "0.48.9", path = "crates/truce-standalone" }
truce-driver = { version = "0.48.9", path = "crates/truce-driver" }
truce-gui = { version = "0.48.9", path = "crates/truce-gui" }
truce-gui-types = { version = "0.48.9", path = "crates/truce-gui-types" }
truce-plugin = { version = "0.48.9", path = "crates/truce-plugin" }
truce-vst2 = { version = "0.48.9", path = "crates/truce-vst2" }
truce-lv2 = { version = "0.48.9", path = "crates/truce-lv2" }
truce-aax = { version = "0.48.9", path = "crates/truce-aax" }
truce-aax-bridge = { version = "0.48.9", path = "crates/truce-aax-bridge" }
truce-test = { version = "0.48.9", path = "crates/truce-test" }
truce-loader = { version = "0.48.9", path = "crates/truce-loader" }
truce-derive = { version = "0.48.9", path = "crates/truce-derive" }
truce-gpu = { version = "0.48.9", path = "crates/truce-gpu" }
truce-egui = { version = "0.48.9", path = "crates/truce-egui" }
truce-iced = { version = "0.48.9", path = "crates/truce-iced" }
truce-slint = { version = "0.48.9", path = "crates/truce-slint" }
truce-slint-build = { version = "0.48.9", path = "crates/truce-slint-build" }
truce-simd = { version = "0.48.9", path = "crates/truce-simd" }
truce-font = { version = "0.48.9", path = "crates/truce-font" }
truce-build = { version = "0.48.9", path = "crates/truce-build" }
truce-shim-types = { version = "0.48.9", path = "crates/truce-shim-types" }
truce-utils = { version = "0.48.9", path = "crates/truce-utils" }

# Common third-party deps consumed by multiple workspace crates.
# Hoisted here so version bumps are a one-line change. wgpu and the
# wgpu-backed UI bridge crates use the same wgpu version under the
# hood; pinning them together prevents the GUI crates from drifting
# onto incompatible wgpu major versions.
thiserror = "2"
toml = "1"
# wgpu's default features include `webgpu` (browser) and `webgl`
# (browser GLES fallback). Plugins ship as native dylibs in DAWs,
# never the browser, so opt out of those. Only `wgsl` (the shader
# source format) lives here; per-OS backends (`metal`, `dx12`,
# `vulkan`, `gles`) are added via target-conditional deps in
# `truce-gpu/Cargo.toml`, then unified across the workspace.
wgpu = { version = "29", default-features = false, features = ["wgsl"] }

# The truce-audio fork carries the AAX / Pro Tools close-path fix
# (responder / tracking-area / layer-contents cleanup). Published to
# crates.io as `baseview-truce`; the `package =` rename keeps every
# `use baseview::*` in the GUI crates compiling unchanged. GUI crates
# consume this via `baseview = { workspace = true }` so the registry
# pin lives in exactly one place.
baseview = { package = "baseview-truce", version = "0.1.1-truce.3" }

# Custom profile for shell-mode (hot-reload) builds. `cargo truce
# install --shell` invokes `cargo build --profile shell --features
# ...,shell`, so the shell binary lands at `target/shell/lib<crate>.dylib`
# — independent of `target/release/` and `target/debug/`. Inheriting
# from "release" gives release-quality DSP perf for testing while
# leaving the regular release / debug profiles untouched for
# `cargo build` / `cargo build --release`.
[profile.shell]
inherits = "release"
