[workspace]
resolver = "3"
members = [
    "crates/truce",
    "crates/truce-core",
    "crates/truce-params",
    "crates/truce-clap",
    "crates/truce-vst3",
    "crates/truce-au",
    "crates/truce-standalone",
    "crates/truce-driver",
    "crates/truce-gui",
    "crates/truce-gui-types",
    "crates/truce-gui-utils",
    "crates/truce-plugin",
    "crates/truce-vst2",
    "crates/truce-lv2",
    "crates/truce-aax",
    "crates/truce-aax-bridge",
    "crates/truce-test",
    "crates/truce-build",
    "crates/truce-loader",
    "crates/truce-loader-tests",
    "crates/truce-loader-tests/fixtures/reload-fixture-common",
    "crates/truce-loader-tests/fixtures/reload-fixture-keep-a",
    "crates/truce-loader-tests/fixtures/reload-fixture-keep-b",
    "crates/truce-loader-tests/fixtures/reload-fixture-reset",
    "crates/truce-derive",
    "crates/cargo-truce",
    "crates/truce-cpu",
    "crates/truce-gpu",
    "crates/truce-egui",
    "crates/truce-iced",
    "crates/truce-shim-types",
    "crates/truce-simd",
    "crates/truce-oversample",
    "crates/truce-font",
    "crates/truce-utils",
    "examples/truce-example-gain",
    "examples/truce-example-gain-inplace",
    "examples/truce-example-block-gain",
    "examples/truce-example-block-saturate",
    "examples/truce-example-block-drywet",
    "examples/truce-example-block-gate",
    "examples/truce-example-block-widen",
    "examples/truce-example-block-surround-meter",
    "examples/truce-example-sidechain",
    "examples/truce-example-synth",
    "examples/truce-example-eq",
    "examples/truce-example-stereo-utility",
    "examples/truce-example-transpose",
    "examples/truce-example-arpeggio",
    "examples/truce-example-gain-egui",
    "examples/truce-example-gain-egui-aspect",
    "examples/truce-example-tremolo",
    "examples/truce-example-state",
    "examples/truce-example-gain-iced",
    "examples/truce-example-fundsp-reverb-worker",
    "examples/truce-example-fundsp-reverb-simple",
    "examples/truce-example-gui-zoo",
    "examples/truce-example-gui-zoo-egui",
    "examples/truce-example-gui-zoo-iced",
    "examples/truce-example-dasp-bitcrusher",
    "examples/truce-example-envelope",
    "examples/truce-example-chord",
    "examples/truce-example-cc-filter",
    "examples/truce-example-mpe-spreader",
    "examples/truce-example-sysex-echo",
    "examples/truce-example-mpe-synth",
    "examples/truce-example-multiport",
    "examples/truce-example-midi-inspector",
]

[workspace.package]
version = "6.3.0"
edition = "2024"
# The Truce License: the dual Apache-2.0 / MIT permissive grant (texts
# in LICENSE-APACHE, LICENSE-MIT) plus a permission-gated rider for
# redistributing truce as a commercial framework or service. Full text
# in LICENSE; the SPDX `LicenseRef-` carries it as a custom identifier
# (the rider is not captured by `Apache-2.0 OR MIT` alone).
license = "LicenseRef-TruceLicense-1.0"
rust-version = "1.92"
description = "Build audio plugins in Rust. One codebase, every format."
repository = "https://github.com/truce-audio/truce"
homepage = "https://github.com/truce-audio/truce"
categories = ["multimedia::audio", "development-tools::cargo-plugins"]
keywords = ["audio", "plugin", "vst", "clap", "daw", "aax", "sfx", "effects", "cubase", "protools", "ableton"]
readme = "README.md"

# Workspace-wide lint config. Crates opt in with `lints.workspace = true`.
# `objc` 0.2's `msg_send!` / `class!` / `sel!` macros emit
# `#[cfg(feature = "cargo-clippy")]` checks against the destination crate;
# whitelist that cfg value so the unexpected_cfgs lint stops complaining
# about an upstream macro-hygiene issue.
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Workspace deps. Every internal `truce-*` entry pins
# `version = "<workspace version>"` alongside `path = "..."`. The
# version is load-bearing for `cargo publish` — cargo strips `path`
# at publish time and embeds the registry version, so every internal
# dep referenced by `workspace = true` from another published crate
# must declare the registry version up front. `bump.sh` rewrites all
# of these in one pass with a global sed on the version string.
[workspace.dependencies]
# `default-features = false` at the workspace so individual examples
# can override per-format gating without iOS pulling `truce/clap`
# transitively. The macOS / Windows / Linux examples each
# explicitly enable `truce/<format>` in their own `[features]` block
# (`clap = ["…", "truce/clap"]`).
truce = { version = "6.3.0", path = "crates/truce", default-features = false }
truce-core = { version = "6.3.0", path = "crates/truce-core" }
truce-params = { version = "6.3.0", path = "crates/truce-params" }
truce-clap = { version = "6.3.0", path = "crates/truce-clap" }
truce-vst3 = { version = "6.3.0", path = "crates/truce-vst3" }
truce-au = { version = "6.3.0", path = "crates/truce-au" }
truce-standalone = { version = "6.3.0", path = "crates/truce-standalone" }
truce-driver = { version = "6.3.0", path = "crates/truce-driver" }
# `default-features = false` at the workspace so members pick a
# renderer feature (`cpu` / `gpu`) explicitly - lets one example
# (truce-example-eq) opt into `gpu` while the rest use `cpu`, and
# lets the renderer crates (truce-egui / -iced / -slint) build
# truce-gui featureless for its types-only surface. External users
# adding `truce-gui = "x"` still get the `cpu` default.
truce-gui = { version = "6.3.0", path = "crates/truce-gui", default-features = false }
truce-gui-types = { version = "6.3.0", path = "crates/truce-gui-types" }
truce-gui-utils = { version = "6.3.0", path = "crates/truce-gui-utils" }
truce-plugin = { version = "6.3.0", path = "crates/truce-plugin" }
truce-vst2 = { version = "6.3.0", path = "crates/truce-vst2" }
truce-lv2 = { version = "6.3.0", path = "crates/truce-lv2" }
truce-aax = { version = "6.3.0", path = "crates/truce-aax" }
truce-aax-bridge = { version = "6.3.0", path = "crates/truce-aax-bridge" }
truce-test = { version = "6.3.0", path = "crates/truce-test" }
truce-loader = { version = "6.3.0", path = "crates/truce-loader" }
truce-derive = { version = "6.3.0", path = "crates/truce-derive" }
truce-cpu = { version = "6.3.0", path = "crates/truce-cpu" }
truce-gpu = { version = "6.3.0", path = "crates/truce-gpu" }
truce-egui = { version = "6.3.0", path = "crates/truce-egui" }
truce-iced = { version = "6.3.0", path = "crates/truce-iced" }
truce-simd = { version = "6.3.0", path = "crates/truce-simd" }
truce-oversample = { version = "6.3.0", path = "crates/truce-oversample" }
truce-font = { version = "6.3.0", path = "crates/truce-font" }
truce-build = { version = "6.3.0", path = "crates/truce-build" }
truce-shim-types = { version = "6.3.0", path = "crates/truce-shim-types" }
truce-utils = { version = "6.3.0", path = "crates/truce-utils" }

# Common third-party deps consumed by multiple workspace crates.
# Hoisted here so version bumps are a one-line change. wgpu and the
# wgpu-backed UI bridge crates use the same wgpu version under the
# hood; pinning them together prevents the GUI crates from drifting
# onto incompatible wgpu major versions.
thiserror = "2"
toml = "1"
# Plist `<data>` payloads, LV2 `xsd:base64Binary` literals, and the
# `.preset` TOML `extra` field. Build-time crates only - truce-utils
# and the runtime wrappers stay base64-free.
base64 = "0.22"
# wgpu's default features include `webgpu` (browser) and `webgl`
# (browser GLES fallback). Plugins ship as native dylibs in DAWs,
# never the browser, so opt out of those. Only `wgsl` (the shader
# source format) lives here; per-OS backends (`metal`, `dx12`,
# `vulkan`, `gles`) are added via target-conditional deps in
# `truce-gpu/Cargo.toml`, then unified across the workspace.
wgpu = { version = "29", default-features = false, features = ["wgsl"] }

# The truce-audio fork carries the AAX / Pro Tools close-path fix
# (responder / tracking-area / layer-contents cleanup). Published to
# crates.io as `baseview-truce`; the `package =` rename keeps every
# `use baseview::*` in the GUI crates compiling unchanged. GUI crates
# consume this via `baseview = { workspace = true }` so the registry
# pin lives in exactly one place.
#
# Vizia's git-pinned baseview rev lives outside this workspace in
# `crates/truce-vizia/` (its own Cargo workspace). Whatever patch
# wiring vizia ends up needing belongs there, not here - keeping the
# parent lockfile + iOS bake free of the vizia mess.
baseview = { package = "baseview-truce", version = "0.1.1-truce.13" }

# Custom profile for shell-mode (hot-reload) builds. `cargo truce
# install --shell` invokes `cargo build --profile shell --features
# ...,shell`, so the shell binary lands at `target/shell/lib<crate>.dylib`
# — independent of `target/release/` and `target/debug/`. Inheriting
# from "release" gives release-quality DSP perf for testing while
# leaving the regular release / debug profiles untouched for
# `cargo build` / `cargo build --release`.
[profile.shell]
inherits = "release"
