[package]
name = "cargo-truce"
version.workspace = true
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Build tool for truce audio plugins"
repository = "https://github.com/truce-audio/truce"
keywords = ["audio", "plugin", "vst", "clap", "daw"]
categories = ["multimedia::audio", "development-tools::build-utils"]

[lib]
name = "cargo_truce"
path = "src/lib.rs"

[[bin]]
name = "cargo-truce"
path = "src/main.rs"

[dependencies]
toml = "1"
serde = { version = "1", features = ["derive"] }
# Substitution engine for `cargo truce new` scaffolds. Single dep on
# top of the existing serde — the only transitive that lands.
tinytemplate = "1.2"
# `cargo truce screenshot --check` decodes the rendered + reference
# PNGs to count differing pixels. Same crate truce-core uses for
# its FFI-side encode path; keeping versions aligned avoids
# transitive duplication when both are in a workspace build.
png = "0.18"
truce-shim-types = { workspace = true }

[dependencies.libloading]
version = "0.9"

[dev-dependencies]
hound = "3"

[lints]
workspace = true
