[package]
name = "truce-aax-bridge"
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
description = "C ABI contract between the truce-aax cdylib and the AAX C++ template (header text + ABI version constant)"

[lints]
workspace = true
