[package]
name = "truce-aax"
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
description = "AAX format wrapper for truce (dlopen bridge, no SDK dependency)"

[dependencies]
truce-core = { workspace = true }
truce-params = { workspace = true }
# Owns the C ABI header text + version constant. Split into its
# own crate so `cargo-truce` (which only needs the header for
# scaffolding) doesn't transitively pull `truce-core` /
# `truce-params` / `crossbeam-queue`.
truce-aax-bridge = { workspace = true }
# Wait-free bounded queue for the host/editor → audio state-load
# handoff so the audio thread is the only one that ever holds
# `&mut Plugin`.
crossbeam-queue = "0.3"

[lints]
workspace = true
