[package]
name = "truce-clap"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLAP format wrapper for truce"

[dependencies]
truce-core = { workspace = true }
truce-params = { workspace = true }
truce-presets = { workspace = true }
clap-sys = "0.5"
