[package]
name = "truce-clap"
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLAP format wrapper for truce"

[dependencies]
truce-core = { workspace = true }
truce-params = { workspace = true }
clap-sys = "0.5"
# Wait-free bounded MPMC queue. Used for the GUI → audio param change
# handoff and the host/editor → audio state-load handoff so the audio
# thread is the only one that ever holds `&mut Plugin`.
crossbeam-queue = "0.3"

[lints]
workspace = true
