[package]
name = "truce-clap"
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLAP format wrapper for truce"

[dependencies]
truce-core = { workspace = true }
truce-params = { workspace = true }
clap-sys = "0.5"
log = "0.4"
# Wait-free bounded MPMC queue. Used for the GUI → audio param change
# handoff and the host/editor → audio state-load handoff so the audio
# thread is the only one that ever holds `&mut Plugin`.
crossbeam-queue = "0.3"

# macOS-only: anchor the editor's child NSView to the parent's
# top in unflipped Cocoa coordinates so the editor doesn't render
# in the bottom-left of any extra plugin-window space Reaper
# leaves around it. Pure `msg_send!` against AppKit.
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[lints]
workspace = true
