[package]
name = "truce-core"
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core types for the truce audio plugin framework"

[dependencies]
truce-params = { workspace = true }
# `cast` + `slugify` live in `truce-utils` (dependency-free) so
# `cargo-truce` and other build-time consumers can use them without
# inheriting `truce-core`'s `truce-params` + `png` publish chain.
# `truce-core` re-exports both at the crate root for backwards-compat
# with existing `truce_core::cast::*` and `truce_core::slugify` callers.
truce-utils = { workspace = true }
png = "0.18"

# The mediation lock (`wrapper::PluginMutex`) is a
# PTHREAD_PRIO_INHERIT pthread mutex on Linux - std's futex lock has
# no priority inheritance there (macOS/Windows stay on std).
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[lints]
workspace = true
