[package]
name = "truce-core"
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core types for the truce audio plugin framework"

[features]
# Paranoid real-time allocation checking: a wrapping global allocator
# flags any allocation the audio thread makes inside `process`. Dev/test
# only - off by default, zero-cost when off.
rt-paranoid = ["dep:backtrace"]

[dependencies]
truce-params = { workspace = true }
# Alloc-free stack capture for the `rt-paranoid` allocation checker: the
# split `trace` (raw walk, no alloc) + `resolve` (symbols, deferred) API
# std's `Backtrace` doesn't expose.
backtrace = { version = "0.3", optional = true }
# `cast` + `slugify` live in `truce-utils` (dependency-free) so
# `cargo-truce` and other build-time consumers can use them without
# inheriting `truce-core`'s `truce-params` + `png` publish chain.
# `truce-core` re-exports both at the crate root for backwards-compat
# with existing `truce_core::cast::*` and `truce_core::slugify` callers.
truce-utils = { workspace = true }
png = "0.18"
# `AtomicCell<T>` backs the lock-free `#[persist]` path for `Copy`
# config fields (re-exported from the prelude). Small types stay
# genuinely atomic; larger ones fall back to a private lock.
crossbeam-utils = "0.8"

# The mediation lock (`wrapper::PluginMutex`) is a
# PTHREAD_PRIO_INHERIT pthread mutex on Linux - std's futex lock has
# no priority inheritance there (macOS/Windows stay on std).
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[lints]
workspace = true
