[package]
name = "truce-core"
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core types for the truce audio plugin framework"

[features]
# Paranoid real-time allocation checking: a wrapping global allocator
# flags any allocation the audio thread makes inside `process`. Dev/test
# only - off by default, zero-cost when off.
rt-paranoid = ["dep:backtrace"]
# Model-check the task pool's schedule/drain handshake with loom. Off by
# default, so ordinary builds and CI never compile it. Run the check with:
#   cargo test -p truce-core --features loom loom
loom = ["dep:loom"]

[dependencies]
truce-params = { workspace = true }
# Alloc-free stack capture for the `rt-paranoid` allocation checker: the
# split `trace` (raw walk, no alloc) + `resolve` (symbols, deferred) API
# std's `Backtrace` doesn't expose.
backtrace = { version = "0.3", optional = true }
# `cast` + `slugify` live in `truce-utils` (dependency-free) so
# `cargo-truce` and other build-time consumers can use them without
# inheriting `truce-core`'s `truce-params` + `png` publish chain.
# `truce-core` re-exports both at the crate root for backwards-compat
# with existing `truce_core::cast::*` and `truce_core::slugify` callers.
truce-utils = { workspace = true }
png = "0.18"
# `AtomicCell<T>` backs the lock-free `#[persist]` path for `Copy`
# config fields (re-exported from the prelude). Small types stay
# genuinely atomic; larger ones fall back to a private lock.
crossbeam-utils = "0.8"

# Lock-free bounded MPMC queue backing the managed background-task pool
# (`tasks`): the audio thread pushes tasks wait-free, pool workers drain.
crossbeam-queue = "0.3"

# Model checker for the task pool's schedule/drain handshake, behind the
# off-by-default `loom` feature (see `[features]`).
loom = { version = "0.7", optional = true }

[lints]
workspace = true
